--- a/index.html
+++ b/index.html
@@ -61,6 +61,6 @@
 
 <body>
     <div class="heart"></div>
-    <div class="contenido"><h1>TE QUIERO</h1><h2>DANI</h2></div>
+    <div class="contenido"><h1>TE QUIERO</h1><h2>MI DANI</h2></div>
 </body>
 </html>
